--- a/src/scss/components/_block.scss
+++ b/src/scss/components/_block.scss
@@ -5,7 +5,7 @@
     line-height: 1.7;
     margin-bottom: 200px;
 
-    img {
+    p > img {
         display: block;
         max-width: 100%;
         margin-bottom: 2em;
@@ -31,7 +31,7 @@
     .block {
         font-size: 1.3em;
 
-        img {
+        p > img {
             float: right;
             max-width: 300px;
             margin-left: 4em !important;
