--- a/docs/style.css
+++ b/docs/style.css
@@ -4,7 +4,7 @@ body {
   height: 100%;
   background-color: var(--background);
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e26145' fill-opacity='0.04'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  font-size: 18px;
+  font-size: 20px;
   line-height: 2.2em;
   background-attachment: fixed;
   color: var(--text);
@@ -152,7 +152,7 @@ body.at-top .grid, body.at-top .grid-title {
 }
 .full > .contents img {
   clear: both;
-  max-width: 600px;
+  max-width: 100%;
   margin-block: 4em;
 }
 .full > .contents p:nth-child(odd) img {
@@ -254,11 +254,19 @@ body.at-top .grid, body.at-top .grid-title {
     padding-top: 16em;
     margin-block-end: 4em;
   }
+  .full .contents img {
+    max-width: 40%;
+  }
   .full .contents .title, .full .contents .description {
     max-width: calc(100% - 460px);
   }
   .full .meta-close {
     top: 2em;
+  }
+}
+@media (min-width: 120px) {
+  .full .contents img {
+    max-width: 60%;
   }
 }
 .project.full .background {
