--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -4,4 +4,5 @@
   <meta name="description" content="{{ site.description }}" />
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
