--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>{{ sitename }} | {{ title }}</title>
+  <title>{{ sitename }} {{ title }}</title>
   <meta name="description" content="{{ site.description }}" />
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
