--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,5 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Quicksand:wght@100;300&display=swap');
 
 body {
   height: 100%;
@@ -9,7 +9,7 @@ body {
   line-height: 2.2em;
   background-attachment: fixed;
   color: var(--text);
-  font-weight: 300;
+  font-weight: 100;
   scrollbar-width: 0;
   -ms-overflow-style: none;
   scrollbar-width: none;
