--- a/src/style.scss
+++ b/src/style.scss
@@ -12,3 +12,5 @@
 @import './scss/components/button';
 @import './scss/components/projects';
 @import './scss/components/lists';
+@import './scss/components/about-me';
+@import './scss/components/open-source';
