--- a/docs/style.css
+++ b/docs/style.css
@@ -5,7 +5,7 @@ body {
   background-color: var(--background);
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e26145' fill-opacity='0.04'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   font-size: 20px;
-  line-height: 2.2em;
+  line-height: 1.7em;
   background-attachment: fixed;
   color: var(--text);
   font-weight: 100;
@@ -72,7 +72,28 @@ a {
 }
 
 ul {
-  padding-left: 15px;
+  padding-left: 1em;
+}
+
+h3 {
+  color: var(--accent);
+  letter-spacing: 1.5px;
+  font-size: 1.4em;
+  margin-bottom: 1em;
+  margin-top: 2em;
+  font-weight: 100;
+  font-family: var(--sans);
+}
+
+h4 {
+  color: var(--accent);
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-size: 1em;
+  margin-bottom: 1em;
+  margin-top: 2em;
+  font-weight: 100;
+  font-family: var(--sans);
 }
 
 .menu {
@@ -141,6 +162,13 @@ body.at-top .grid, body.at-top .grid-title {
 .full > .contents {
   max-width: var(--max-width);
   width: 100%;
+  font-size: 1.3em;
+  line-height: 1.6em;
+  font-family: var(--sans);
+}
+.full > .contents p {
+  font-weight: 300;
+  margin-bottom: 1.5em;
 }
 .full > .contents img, .full > .contents video {
   border-radius: 5px;
@@ -155,30 +183,24 @@ body.at-top .grid, body.at-top .grid-title {
   max-width: 100%;
   margin-block: 4em;
 }
-.full > .contents p:nth-child(odd) img {
-  float: right;
-  margin-left: 3em;
+.full > .contents p + ul {
+  margin-top: -1em;
 }
-.full > .contents p:nth-child(even) img {
-  float: left;
-  margin-right: 3em;
-}
-.full p:first-of-type {
-  font-size: 1.2em;
-  color: var(--accent);
-  margin-bottom: 2em;
+.full > .contents ul {
+  margin-bottom: 1.5em;
 }
 .full .title {
   font-family: var(--sans);
   color: var(--accent);
   font-size: 3em;
-  line-height: 1em;
+  line-height: 1.5em;
   margin-top: 1em;
   font-weight: 900;
 }
 .full .description {
   font-family: var(--sans);
   font-weight: 100;
+  line-height: 1.5em;
   margin-bottom: 2em;
   color: var(--accent2);
 }
@@ -460,13 +482,6 @@ body.at-top .introduction .inner {
 .block a {
   color: inherit;
 }
-.block h4 {
-  margin-top: 2em;
-  margin-bottom: 0.5em;
-  font-weight: 300;
-  color: var(--accent);
-  font-size: 1.4em;
-}
 
 @media (min-width: 720px) {
   .block {
@@ -549,6 +564,12 @@ a.button:hover, button.button:hover, .button:hover {
   grid-template-columns: 1fr;
   gap: 40px;
 }
+.lists h4 {
+  margin-top: 0;
+}
+.lists ul {
+  margin-top: 1.5em;
+}
 
 @media (min-width: 720px) {
   .lists {
@@ -559,4 +580,14 @@ a.button:hover, button.button:hover, .button:hover {
   .lists {
     grid-template-columns: 1fr 1fr 1fr;
   }
+}
+.about-me p:first-of-type {
+  font-size: 1.2em;
+  color: var(--accent);
+  margin-bottom: 2em;
+}
+
+.open-source em {
+  font-size: 0.8em;
+  line-height: 0.9em;
 }
