--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -6,7 +6,7 @@ body {
   background-color: var(--background);
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23e26145' fill-opacity='0.04'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   font-size: 20px;
-  line-height: 2.2em;
+  line-height: 1.7em;
   background-attachment: fixed;
   color: var(--text);
   font-weight: 100;
@@ -66,5 +66,27 @@ a {
 }
 
 ul {
-  padding-left: 15px;
+  padding-left: 1em;
+}
+
+h3 {
+  color: var(--accent);
+  letter-spacing: 1.5px;
+  font-size: 1.4em;
+  margin-bottom: 1em;
+  margin-top: 2em;
+  font-weight: 100;
+  font-family: var(--sans);
+}
+
+h4 {
+  color: var(--accent);
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-size: 1em;
+  margin-bottom: 1em;
+  margin-top: 2em;
+  font-weight: 100;
+  font-family: var(--sans);
+
 }
