--- a/src/scss/components/_full.scss
+++ b/src/scss/components/_full.scss
@@ -8,6 +8,14 @@
     > .contents {
         max-width: var(--max-width);
         width: 100%;
+        font-size: 1.3em;
+        line-height: 1.6em;
+        font-family: var(--sans);
+
+        p {
+            font-weight: 300;
+            margin-bottom: 1.5em;
+        }
 
         img, video {
             border-radius: 5px;
@@ -20,34 +28,24 @@
 
         img {
             clear: both;
-            // max-width: 50%;
             max-width: 100%;
             margin-block: 4em;
         }
 
-        p:nth-child(odd) img {
-            float: right;
-            margin-left: 3em;
+        p + ul {
+            margin-top: -1em;
         }
 
-        p:nth-child(even) img {
-            float: left;
-            margin-right: 3em;
-
+        ul {
+            margin-bottom: 1.5em;
         }
-    }
-
-    p:first-of-type {
-        font-size: 1.2em;
-        color: var(--accent);
-        margin-bottom: 2em;
     }
 
     .title {
         font-family: var(--sans);
         color: var(--accent);
         font-size: 3em;
-        line-height: 1em;
+        line-height: 1.5em;
         margin-top: 1em;
         font-weight: 900;
     }
@@ -55,6 +53,7 @@
     .description {
         font-family: var(--sans);
         font-weight: 100;
+        line-height: 1.5em;
         margin-bottom: 2em;
         color: var(--accent2);
     }
