--- a/docs/layouts/project.hbs
+++ b/docs/layouts/project.hbs
@@ -57,7 +57,7 @@
           {{/if}}
         </div>
   
-        {{{ contents }}}
+        {{{ markdown }}}
       </div>
     </article>
   {{/content}}
