--- a/src/layouts/index.hbs
+++ b/src/layouts/index.hbs
@@ -27,21 +27,21 @@
       <h2 class="grid-title">About me</h2>
       <div class="about-me block" id="about-me">
         {{#page "about"}}
-          {{{ contents }}}
+          {{{ markdown }}}
         {{/page}}
       </div>
 
       {{#page "i-love-open-source"}}
         <h2 class="grid-title">{{ title }}</h2>
         <div class="open-source block" id="open-source">
-          {{{ contents }}}
+          {{{ markdown }}}
         </div>
       {{/page}}
 
       <h2 class="grid-title">Contact</h2>
       <div class="contact block" id="contact">
         {{#page "contact"}}
-          {{{ contents }}}
+          {{{ markdown }}}
         {{/page}}
       </div>
 
