--- a/src/partials/project.teaser.hbs
+++ b/src/partials/project.teaser.hbs
@@ -2,5 +2,5 @@
     <img class="poster full-size-on-click" src="//images.weserv.nl/?url={{ poster }}&w=1200&h=700&fit=cover&a=attention" />
     
     <h3 class="title">{{ title }}</h3>
-    <h4 class="description">{{ description }}</h3>
+    <span class="description">{{ description }}</span>
 </a>
