--- a/docs/layouts/page.hbs
+++ b/docs/layouts/page.hbs
@@ -5,7 +5,7 @@
 
     <article class="page full">
       <h1 class="title">{{ title }}</h1>
-      <div class="contents">{{{ contents }}}</div>
+      <div class="contents">{{{ markdown }}}</div>
     </article>
   {{/content}}
   
