--- a/src/layouts/index.hbs
+++ b/src/layouts/index.hbs
@@ -24,6 +24,14 @@
         <button class="show-more">Show more</button>
       </div>
 
+
+      <h2 class="grid-title">Blogs</h2>
+      <div class="blogs grid" id="blogs">
+        {{#each (limit collections.blogs 0 3) }}
+          {{> blog.teaser }}
+        {{/each}}
+      </div>
+
       <h2 class="grid-title">About me</h2>
       <div class="about-me block" id="about-me">
         {{#page "about"}}
