--- a/src/scss/components/_full.scss
+++ b/src/scss/components/_full.scss
@@ -47,6 +47,8 @@
         font-size: 2em;
         line-height: 1.5em;
         margin-top: 1em;
+        width: 100%;
+        max-width: var(--max-width);
         font-weight: 900;
     }
 
