--- a/src/style.scss
+++ b/src/style.scss
@@ -14,3 +14,5 @@
 @import './scss/components/lists';
 @import './scss/components/about-me';
 @import './scss/components/open-source';
+@import './scss/components/blogs';
+@import './scss/components/blog.teaser';
