--- a/docs/layouts/index.hbs
+++ b/docs/layouts/index.hbs
@@ -26,7 +26,7 @@
 
 
       <h2 class="grid-title">Blogs</h2>
-      <div class="blogs grid" id="blogs">
+      <div class="blogs" id="blogs">
         {{#each (limit collections.blogs 0 3) }}
           {{> blog.teaser }}
         {{/each}}
