--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -92,7 +92,6 @@ h4 {
   margin-top: 2em;
   font-weight: 100;
   font-family: var(--sans);
-
 }
 
 iframe {
@@ -133,4 +132,9 @@ pre {
   background: rgba(white, .1);
   font-size: .8em !important;
   line-height: 1.6em;
+}
+
+h5 {
+  font-size: 1.4em;
+  line-height: 1.8em;
 }
